fix spacing in player/score word pills

--- a/src/player/style.scss
+++ b/src/player/style.scss
@@ -124,10 +124,6 @@ section {
   }
 }
 
-#passage .word-pill-container {
-  margin-right: 8px;
-}
-
 .word-pill-home:empty {
   width: 6rem;
   height: 1.85rem;
@@ -502,10 +498,6 @@ section {
 
   #passage {
     font-size: 16px;
-
-    .word-pill-container {
-      margin-right: 4px;
-    }
   }
 
   #submit-button {
