--- a/src/scorescreen/style.scss
+++ b/src/scorescreen/style.scss
@@ -4,7 +4,9 @@ body {
     height: fit-content;
     font-family: "Lato", sans-serif;
     min-height: 0;
-    background: #230659
+    background: #230659;
+    padding: 0;
+    gap: 0;
 }
 
 .pill {
@@ -58,7 +60,8 @@ body {
         height: 25px;
         width: 5rem;
         background-color: #f5f5f5;
-        border: 1px solid #565656;
+        outline: 1px solid #565656;
+        outline-offset: -1px;
         box-shadow: inset 0 4px 4px #00000040;
 
         position: relative;
@@ -92,7 +95,7 @@ body {
             }
 
             &:empty {
-                
+                outline: none;
                 height: unset;
                 width: unset;
                 background-color: #ffce1b;
